--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
         run: npm install
       - name: Build
         # Gh-pages updated build (for handling refresh routing errors)
-        run: npm run build
+        run: npm run build && cp ./dist/index.html .dist/404.html
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
