--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,8 +38,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Build
-        # Gh-pages updated build (for handling refresh routing errors)
-        run: npm run build && cp ./dist/index.html .dist/404.html
+        run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
