--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.4.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-error-boundary": "^4.0.10",
     "react-router-dom": "^6.14.2",
     "vite-plugin-svgr": "^3.2.0"
   },
